tests/valid/teste_operacoes.lang
//Aritméticas

int a = 10;
int b = 20;
printf (a + b);
printf (a * b);
