tests/invalid/var_nao_declarada.lang
int a;
a = 10;
printf(a + b); // 'b' nunca foi declarada!